--- a/Projects/StandAlone/DebugWindow/GExpertsDebugWindow.dproj
+++ b/Projects/StandAlone/DebugWindow/GExpertsDebugWindow.dproj
@@ -3,24 +3,24 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
         <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-        <DCC_DependencyCheckOutputName>..\..\..\binaries\GExpertsDebugWindow.exe</DCC_DependencyCheckOutputName>
+        <DCC_DependencyCheckOutputName>..\..\..\bin\GExpertsDebugWindow.exe</DCC_DependencyCheckOutputName>
         <DCC_UsePackage>vcl;vclx</DCC_UsePackage>
         <MainSource>GExpertsDebugWindow.dpr</MainSource>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
         <ProjectGuid>{1d77cf08-2dfd-43e7-9d11-1badca15d032}</ProjectGuid>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <DCC_DcuOutput>.\dcu</DCC_DcuOutput>
+        <DCC_DcuOutput>..\..\..\bin\$(MSBuildProjectName)</DCC_DcuOutput>
         <DCC_DebugInformation>False</DCC_DebugInformation>
         <DCC_Define>RELEASE;NO_TRANSLATION;NO_TRANSLATION_HINT</DCC_Define>
         <DCC_Description>GExperts Debug Window</DCC_Description>
-        <DCC_ExeOutput>..\..\..\binaries</DCC_ExeOutput>
-        <DCC_HppOutput>.\dcu</DCC_HppOutput>
+        <DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
+        <DCC_HppOutput>..\..\..\bin\$(MSBuildProjectName)</DCC_HppOutput>
         <DCC_ImageBase>500000</DCC_ImageBase>
         <DCC_IncludePath>..\..\..\source\Utils;..\..\..\ExternalSource\UniSynEdit;..\..\..\ExternalSource\RegExpr;..\..\..\Source\Include;..\..\..\source\framework;..\..\..\ExternalSource\dzlib;..\..\..\ExternalSource</DCC_IncludePath>
         <DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
         <DCC_LocalDebugSymbols>False</DCC_LocalDebugSymbols>
-        <DCC_ObjOutput>.\dcu</DCC_ObjOutput>
+        <DCC_ObjOutput>..\..\..\bin\$(MSBuildProjectName)</DCC_ObjOutput>
         <DCC_ObjPath>..\..\..\source\Utils;..\..\..\ExternalSource\UniSynEdit;..\..\..\ExternalSource\RegExpr;..\..\..\Source\Include;..\..\..\source\framework;..\..\..\ExternalSource\dzlib;..\..\..\ExternalSource</DCC_ObjPath>
         <DCC_RangeChecking>True</DCC_RangeChecking>
         <DCC_ResourcePath>..\..\..\source\Utils;..\..\..\ExternalSource\UniSynEdit;..\..\..\ExternalSource\RegExpr;..\..\..\Source\Include;..\..\..\source\framework;..\..\..\ExternalSource\dzlib;..\..\..\ExternalSource</DCC_ResourcePath>
@@ -33,16 +33,16 @@
         <Version>7.0</Version>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <DCC_DcuOutput>.\dcu</DCC_DcuOutput>
+        <DCC_DcuOutput>..\..\..\bin\$(MSBuildProjectName)</DCC_DcuOutput>
         <DCC_Define>DEBUG;NO_TRANSLATION;NO_TRANSLATION_HINT</DCC_Define>
         <DCC_Description>GExperts Debug Window</DCC_Description>
-        <DCC_ExeOutput>..\..\..\binaries</DCC_ExeOutput>
+        <DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
         <DCC_GenerateStackFrames>True</DCC_GenerateStackFrames>
-        <DCC_HppOutput>.\dcu</DCC_HppOutput>
+        <DCC_HppOutput>..\..\..\bin\$(MSBuildProjectName)</DCC_HppOutput>
         <DCC_ImageBase>500000</DCC_ImageBase>
         <DCC_IncludePath>$(BDS)\lib\Debug;..\..\..\source\Utils;..\..\..\ExternalSource\UniSynEdit;..\..\..\ExternalSource\RegExpr;..\..\..\Source\Include;..\..\..\source\framework;..\..\..\ExternalSource\dzlib;..\..\..\ExternalSource</DCC_IncludePath>
         <DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
-        <DCC_ObjOutput>.\dcu</DCC_ObjOutput>
+        <DCC_ObjOutput>..\..\..\bin\$(MSBuildProjectName)</DCC_ObjOutput>
         <DCC_ObjPath>$(BDS)\lib\Debug;..\..\..\source\Utils;..\..\..\ExternalSource\UniSynEdit;..\..\..\ExternalSource\RegExpr;..\..\..\Source\Include;..\..\..\source\framework;..\..\..\ExternalSource\dzlib;..\..\..\ExternalSource</DCC_ObjPath>
         <DCC_Optimize>False</DCC_Optimize>
         <DCC_RangeChecking>True</DCC_RangeChecking>
